--- a/index.html
+++ b/index.html
@@ -103,12 +103,13 @@
         background: black;
         display: flex; align-items: center; justify-content: center;
         pointer-events: none;
+        padding: 20px;
     }
     .intro-text {
-        font-size: 2.5rem; font-weight: 300; letter-spacing: -0.02em;
+        font-size: 2rem; md:font-size: 3rem; font-weight: 300; letter-spacing: -0.02em;
         background: linear-gradient(to bottom, #fff, #666); -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-        opacity: 0; position: absolute; transform: scale(0.95); transition: all 0.8s cubic-bezier(0.16, 1, 0.3, 1);
-        text-align: center; width: 100%; padding: 0 20px;
+        opacity: 0; transform: scale(0.95); transition: all 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+        text-align: center; width: 100%; max-width: 800px;
     }
     .intro-active { opacity: 1; transform: scale(1); }
 
@@ -179,8 +180,7 @@
 <body>
 
   <div id="intro-layer" class="intro-overlay">
-      <h1 id="intro-text-1" class="intro-text">Your Potential Deserves More</h1>
-      <h1 id="intro-text-2" class="intro-text">You have come to the right place</h1>
+      <h1 id="intro-text" class="intro-text">Your Potential Deserves More.<br>You have come to the right place.</h1>
   </div>
 
   <div class="fixed inset-0 z-0 pointer-events-none">
@@ -228,6 +228,11 @@
           Start Free Trial
       </button>
   </div>
+
+  <a href="https://wa.me/1234567890" target="_blank" class="fixed bottom-24 right-4 z-40 bg-[#25D366] w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition md:bottom-8">
+      <i class="fa-brands fa-whatsapp text-white text-2xl"></i>
+      <span class="absolute right-14 bg-white text-black text-[10px] font-bold py-1 px-2 rounded whitespace-nowrap hidden md:block">Need help?</span>
+  </a>
 
   <section class="relative pt-32 md:pt-52 pb-12 overflow-hidden flex flex-col items-center">
     <div class="relative z-10 text-center max-w-5xl px-6 mb-10 flex flex-col items-center">
@@ -338,6 +343,45 @@
       </div>
   </section>
 
+  <section id="features" class="py-32 border-t border-white/5">
+      <div class="max-w-7xl mx-auto px-6">
+          <h2 class="text-3xl font-medium text-white mb-16 text-center">The Unfair Advantage.</h2>
+          
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+              <div class="physics-card p-8 hover:bg-white/5 transition">
+                  <i class="fa-solid fa-ghost text-2xl text-purple-400 mb-6"></i>
+                  <h3 class="text-white font-bold mb-2">Total Stealth</h3>
+                  <p class="text-sm text-slate-400">Invisible to Zoom, Teams, and Proctoring tools. No screen capture trace.</p>
+              </div>
+              <div class="physics-card p-8 hover:bg-white/5 transition">
+                  <i class="fa-solid fa-eye text-2xl text-blue-400 mb-6"></i>
+                  <h3 class="text-white font-bold mb-2">Visual Context</h3>
+                  <p class="text-sm text-slate-400">Captures system design diagrams and whiteboard problems instantly.</p>
+              </div>
+              <div class="physics-card p-8 hover:bg-white/5 transition">
+                  <i class="fa-solid fa-microphone text-2xl text-red-400 mb-6"></i>
+                  <h3 class="text-white font-bold mb-2">Voice Input</h3>
+                  <p class="text-sm text-slate-400">Transcribes interviewer questions and generates answers before they finish.</p>
+              </div>
+              <div class="physics-card p-8 hover:bg-white/5 transition">
+                  <i class="fa-solid fa-eye-slash text-2xl text-slate-400 mb-6"></i>
+                  <h3 class="text-white font-bold mb-2">Ghost Dock</h3>
+                  <p class="text-sm text-slate-400">No dock icon, no taskbar presence. Controlled via global hotkeys.</p>
+              </div>
+              <div class="physics-card p-8 hover:bg-white/5 transition">
+                  <i class="fa-solid fa-keyboard text-2xl text-green-400 mb-6"></i>
+                  <h3 class="text-white font-bold mb-2">Direct Input</h3>
+                  <p class="text-sm text-slate-400">Type queries manually for clarifications without switching windows.</p>
+              </div>
+              <div class="physics-card p-8 hover:bg-white/5 transition">
+                  <i class="fa-solid fa-language text-2xl text-yellow-400 mb-6"></i>
+                  <h3 class="text-white font-bold mb-2">Polyglot</h3>
+                  <p class="text-sm text-slate-400">Translates any language (Mandarin, Hindi, Spanish) to English solutions live.</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
   <section class="py-20 border-t border-white/5">
       <div class="max-w-7xl mx-auto px-6">
           <h2 class="text-3xl font-medium text-white mb-12 text-center">The Difference.</h2>
@@ -363,29 +407,6 @@
           </div>
       </div>
   </section>
-
-  <section id="features" class="py-32 border-t border-white/5">
-      <div class="max-w-7xl mx-auto px-6">
-          <h2 class="text-3xl font-medium text-white mb-16 text-center">The Unfair Advantage.</h2>
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-              <div class="physics-card p-8 hover:bg-white/5 transition">
-                  <i class="fa-solid fa-ghost text-2xl text-purple-400 mb-6"></i>
-                  <h3 class="text-white font-bold mb-2">Total Stealth</h3>
-                  <p class="text-sm text-slate-400">Invisible to Zoom, Teams, and Proctoring tools. No screen capture trace.</p>
-              </div>
-              <div class="physics-card p-8 hover:bg-white/5 transition">
-                  <i class="fa-solid fa-eye text-2xl text-blue-400 mb-6"></i>
-                  <h3 class="text-white font-bold mb-2">Visual Context</h3>
-                  <p class="text-sm text-slate-400">Captures system design diagrams and whiteboard problems instantly.</p>
-              </div>
-              <div class="physics-card p-8 hover:bg-white/5 transition">
-                  <i class="fa-solid fa-microphone text-2xl text-red-400 mb-6"></i>
-                  <h3 class="text-white font-bold mb-2">Voice Input</h3>
-                  <p class="text-sm text-slate-400">Transcribes interviewer questions and generates answers before they finish.</p>
-              </div>
-          </div>
-      </div>
-  </section>
   
   <section class="py-32 border-t border-white/5 bg-[#050505] overflow-hidden">
       <div class="max-w-7xl mx-auto px-6 mb-12 flex justify-between items-end">
@@ -399,12 +420,32 @@
           <div class="physics-card p-8 min-w-[350px] snap-center">
               <div class="flex gap-1 text-accent text-xs mb-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
               <p class="text-sm text-slate-300 leading-relaxed mb-6">"I was stuck on a graph DP problem during my Google L5 loop. Whis provided the optimal solution instantly. I signed the offer yesterday."</p>
-              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div class="w-8 h-8 rounded-full bg-slate-800"></div><div><p class="text-xs font-bold text-white">James K.</p><p class="text-[10px] text-slate-500">Google, L5</p></div></div>
+              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div><p class="text-xs font-bold text-white">James K.</p><p class="text-[10px] text-slate-500">Google, L5</p></div></div>
           </div>
           <div class="physics-card p-8 min-w-[350px] snap-center">
               <div class="flex gap-1 text-accent text-xs mb-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
               <p class="text-sm text-slate-300 leading-relaxed mb-6">"The stealth mode is legit. I screenshared my entire desktop for 45 minutes and the interviewer saw nothing but my IDE. Magic."</p>
-              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div class="w-8 h-8 rounded-full bg-slate-800"></div><div><p class="text-xs font-bold text-white">Sarah M.</p><p class="text-[10px] text-slate-500">Amazon, SDE II</p></div></div>
+              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div><p class="text-xs font-bold text-white">Sarah M.</p><p class="text-[10px] text-slate-500">Amazon, SDE II</p></div></div>
+          </div>
+          <div class="physics-card p-8 min-w-[350px] snap-center">
+              <div class="flex gap-1 text-accent text-xs mb-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+              <p class="text-sm text-slate-300 leading-relaxed mb-6">"Worth every penny. The ROI on this tool is infinite. One job offer pays for a lifetime of subscriptions. Just get it."</p>
+              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div><p class="text-xs font-bold text-white">David R.</p><p class="text-[10px] text-slate-500">Netflix, Senior</p></div></div>
+          </div>
+           <div class="physics-card p-8 min-w-[350px] snap-center">
+              <div class="flex gap-1 text-accent text-xs mb-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+              <p class="text-sm text-slate-300 leading-relaxed mb-6">"Visual context feature saved me. It analyzed the system design diagram on the whiteboard and gave me the scalability bottlenecks."</p>
+              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div><p class="text-xs font-bold text-white">Elena G.</p><p class="text-[10px] text-slate-500">Meta, E4</p></div></div>
+          </div>
+           <div class="physics-card p-8 min-w-[350px] snap-center">
+              <div class="flex gap-1 text-accent text-xs mb-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+              <p class="text-sm text-slate-300 leading-relaxed mb-6">"English isn't my first language. Whis translated my thoughts into professional answers live. Total game changer."</p>
+              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div><p class="text-xs font-bold text-white">Michael T.</p><p class="text-[10px] text-slate-500">Uber, L4</p></div></div>
+          </div>
+           <div class="physics-card p-8 min-w-[350px] snap-center">
+              <div class="flex gap-1 text-accent text-xs mb-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+              <p class="text-sm text-slate-300 leading-relaxed mb-6">"The ghost dock feature is essential. I had to screen share my whole desktop and no one noticed a thing."</p>
+              <div class="flex items-center gap-3 border-t border-white/5 pt-4"><div><p class="text-xs font-bold text-white">Priya S.</p><p class="text-[10px] text-slate-500">Microsoft, SDE II</p></div></div>
           </div>
       </div>
   </section>
@@ -576,17 +617,14 @@
         });
     }
 
-    // --- 5. CINEMATIC INTRO LOGIC ---
+    // --- 5. CINEMATIC INTRO LOGIC (FASTER & COMBINED) ---
     function playIntro() {
-        const t1 = document.getElementById('intro-text-1');
-        const t2 = document.getElementById('intro-text-2');
+        const t1 = document.getElementById('intro-text');
         const layer = document.getElementById('intro-layer');
-        setTimeout(() => t1.classList.add('intro-active'), 500);
-        setTimeout(() => t1.classList.remove('intro-active'), 2000);
-        setTimeout(() => t2.classList.add('intro-active'), 2500);
-        setTimeout(() => t2.classList.remove('intro-active'), 4000);
-        setTimeout(() => { layer.style.opacity = '0'; }, 4500);
-        setTimeout(() => { layer.style.display = 'none'; }, 5500);
+        // Faster sequence
+        setTimeout(() => t1.classList.add('intro-active'), 100);
+        setTimeout(() => { layer.style.opacity = '0'; }, 2000); 
+        setTimeout(() => { layer.style.display = 'none'; }, 2500);
     }
 
     // --- CAROUSEL ---
