--- a/index.html
+++ b/index.html
@@ -252,13 +252,10 @@
         <span class="text-white font-medium">Real-time. Undetectable. Works on Zoom/Meet/Teams.</span>
       </p>
 
-      <div class="flex flex-col w-full gap-3 md:flex-row md:justify-center md:w-auto">
+      <div class="hidden md:flex flex-col w-full gap-3 md:flex-row md:justify-center md:w-auto">
         <button id="heroDownloadBtn" onclick="openDownloadModal()" class="w-full md:w-auto px-10 py-4 rounded-xl md:rounded-full bg-white text-black text-sm font-bold hover:scale-105 transition duration-300 shadow-[0_0_50px_rgba(255,255,255,0.2)] flex justify-center items-center gap-3">
             <i class="fa-brands fa-apple text-xl"></i> Start Free Trial
         </button>
-        <a href="#mobile-demo" class="md:hidden w-full py-4 rounded-xl border border-white/20 text-white text-sm font-bold flex justify-center items-center gap-2">
-            <i class="fa-solid fa-play"></i> Watch Demo
-        </a>
       </div>
 
       <div class="flex justify-center gap-4 mt-4 text-[10px] text-slate-500 font-mono">
@@ -285,13 +282,13 @@
 
     <div id="mobile-demo" class="md:hidden w-full px-6 mb-20 scroll-mt-24">
         <p class="text-center text-xs font-bold text-slate-500 uppercase tracking-widest mb-4">See how it works (Silently)</p>
-        <div class="relative w-full aspect-[9/16] rounded-2xl overflow-hidden border border-white/20 shadow-2xl bg-black">
-             <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/80 z-10 flex flex-col justify-end p-6">
+        <div class="relative w-full h-[60vh] rounded-2xl overflow-hidden border border-white/20 shadow-2xl bg-black">
+             <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black/80 z-10 flex flex-col justify-end p-6 pointer-events-none">
                  <p class="text-white font-bold mb-1">Live Interview Assistant</p>
                  <p class="text-xs text-slate-300">Whis-AI transcribing & solving instantly.</p>
              </div>
-             <video src="visual.mp4" class="absolute inset-0 w-full h-full object-cover opacity-60" autoplay loop muted playsinline></video>
-             <div class="absolute inset-0 flex items-center justify-center z-0">
+             <video src="visual.mp4" class="absolute inset-0 w-full h-full object-contain opacity-80" autoplay loop muted playsinline></video>
+             <div class="absolute inset-0 flex items-center justify-center z-0 pointer-events-none">
                  <div class="w-12 h-12 rounded-full bg-white/20 backdrop-blur flex items-center justify-center">
                      <i class="fa-solid fa-volume-xmark text-white"></i>
                  </div>
