--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     }
     .intro-active { opacity: 1; transform: scale(1); }
 
-    /* --- CAROUSEL FIXES (UPDATED FOR MOBILE) --- */
+    /* --- CAROUSEL FIXES (UPDATED FOR MOBILE & OVERLAP) --- */
     .carousel-container { 
         perspective: 1200px; 
         display: flex; 
@@ -140,7 +140,8 @@
         box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
     }
     @media (min-width: 768px) { 
-        .carousel-item { width: 85%; } /* Desktop width */
+        /* FIX: Added max-height to prevent overlap on wide screens */
+        .carousel-item { width: 85%; max-height: 100%; } 
     }
     
     /* Center Item */
@@ -281,7 +282,7 @@
       </a>
     </div>
 
-    <div class="w-full max-w-7xl mx-auto mb-10 relative scroller-mask px-6">
+    <div class="w-full max-w-7xl mx-auto mb-10 md:mb-24 relative scroller-mask px-6">
         <div class="flex overflow-hidden group">
             <div class="flex gap-16 animate-scroll group-hover:[animation-play-state:paused] items-center opacity-40 grayscale hover:grayscale-0 transition duration-500">
                 <i class="fa-brands fa-google text-3xl"></i><i class="fa-brands fa-meta text-3xl"></i><i class="fa-brands fa-amazon text-3xl"></i>
