--- a/index.html
+++ b/index.html
@@ -780,6 +780,7 @@
         // Formula: Hour * Hour (e.g., 2PM = 14 * 14 = 196)
         // If hour is 0 (midnight), avoid 0 signups by showing something minimal like 15.
         let count = hour * hour;
+        count = count+942;
         if(count === 0) count = 15; 
         
         const badge = document.getElementById('signup-badge-text');
