--- a/index.html
+++ b/index.html
@@ -807,9 +807,9 @@
         if (!isWin && !isMac) {
              btn.innerHTML = '<span class="flex items-center gap-2"><i class="fa-brands fa-windows text-xl"></i><i class="fa-brands fa-apple text-xl"></i></span> Start Free Trial';
         } else if (isWin) {
-             btn.innerHTML = '<i class="fa-brands fa-windows text-xl"></i> Start Free Trial (Windows)';
+             btn.innerHTML = '<i class="fa-brands fa-windows text-xl"></i> Start Free Trial ';
         } else if (isMac) {
-             btn.innerHTML = '<i class="fa-brands fa-apple text-xl"></i> Start Free Trial (macOS)';
+             btn.innerHTML = '<i class="fa-brands fa-apple text-xl"></i> Start Free Trial ';
         }
     }
 
