--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
   <footer class="py-12 bg-black border-t border-white/5 flex flex-col items-center gap-6 pb-32 md:pb-12">
     <div class="flex flex-wrap justify-center gap-6 text-slate-500 text-xs font-medium">
         <a href="/contact" class="hover:text-white transition">Contact</a>
+        <a href="/troubleshoot" class="hover:text-white transition">Troubleshoot</a>
         <a href="/shipping-policy" class="hover:text-white transition">Shipping Policy</a>
         <a href="/support" class="hover:text-white transition">Support</a>
         <a href="/terms" class="hover:text-white transition">Terms</a>
