--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8" />
   <title>Whis-AI – The Invisible Interview Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
-  
+   
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -46,10 +46,10 @@
       }
     }
   </script>
-  
+   
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  
+   
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script src="https://www.paypal.com/sdk/js?client-id=AWt11sXML_MxwSp4shnL-JDfXlqWe_wO7d_VVCvRNT00Ws-dHCTywlD9La4aWpNNJbfz-SGuWggCNgip&currency=USD"></script>
@@ -320,7 +320,13 @@
         </button>
       </div>
 
-      <div class="flex justify-center flex-wrap gap-4 mt-2 text-[10px] text-slate-500 font-mono reveal-on-scroll tracking-tight uppercase" style="transition-delay: 400ms;">
+      <div class="mt-6 reveal-on-scroll animate-pulse-slow" style="transition-delay: 350ms;">
+         <span class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full bg-accent/10 border border-accent/20 text-[11px] font-bold text-accent tracking-wide shadow-[0_0_15px_rgba(0,242,255,0.1)]">
+            <i class="fa-solid fa-gift"></i> Includes 3 Free Full-Access Sessions
+         </span>
+      </div>
+
+      <div class="flex justify-center flex-wrap gap-4 mt-4 text-[10px] text-slate-500 font-mono reveal-on-scroll tracking-tight uppercase" style="transition-delay: 400ms;">
           <span class="flex items-center gap-1.5 bg-white/5 px-2 py-1 rounded"><i class="fa-solid fa-check text-accent"></i> No credit card</span>
           <span class="flex items-center gap-1.5 bg-white/5 px-2 py-1 rounded"><i class="fa-solid fa-check text-accent"></i> Cancel anytime</span>
           <span class="flex items-center gap-1.5 bg-white/5 px-2 py-1 rounded"><i class="fa-solid fa-check text-accent"></i> Undetectable</span>
@@ -563,6 +569,7 @@
                 <h3 class="text-xs font-bold text-slate-500 uppercase tracking-widest mb-4">Starter</h3>
                 <div class="text-4xl font-bold text-white mb-6">Free</div>
                 <div class="space-y-4 text-xs text-slate-400 mb-8 flex-grow">
+                    <p class="flex gap-3 text-accent font-bold"><i class="fa-solid fa-unlock"></i> 3 Free Full-Access Sessions</p>
                     <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> 10 Daily Syntheses</p>
                     <p class="flex gap-3"><i class="fa-solid fa-check text-white"></i> Basic Code Gen</p>
                     <p class="flex gap-3 opacity-50"><i class="fa-solid fa-xmark"></i> No Stealth Mode</p>
