--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                           <div class="w-1.5 bg-white rounded-full h-4 animate-pulse"></div>
                       </div>
                       <p class="mt-8 text-sm text-slate-300 font-mono border-l-2 border-accent pl-4 py-2 bg-white/5 rounded-r-lg">
-                          "Analyzing graph complexity... Suggesting Dijkstra's algorithm for O(E log V) optimization."
+                          "Question Detected: Trapping Rain Water... Implementing Two-Pointer Approach for O(1) Space Complexity."
                       </p>
                   </div>
               </div>
