--- a/index.html
+++ b/index.html
@@ -240,12 +240,18 @@
           <h2 class="text-6xl md:text-8xl font-black text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-purple-500 to-yellow-500 mb-2 uppercase italic tracking-tighter drop-shadow-2xl">Jackpot!</h2>
           <p class="text-2xl text-white font-bold mb-6">Device ID Selected for <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-purple-500">Elite Tier Access</span></p>
           
-          <div class="bg-white/5 border border-white/10 rounded-2xl p-6 mb-8 w-full backdrop-blur-md relative overflow-hidden">
-               <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/10 to-purple-500/10"></div>
-               <div class="relative z-10">
-                   <div class="flex justify-between text-sm text-cyan-300 font-mono mb-2"><span>ELITE VALUE</span><span>$199.00</span></div>
-                   <div class="flex justify-between text-lg text-white font-mono font-bold"><span>YOUR PRICE</span><span class="text-green-400">$0.00</span></div>
-               </div>
+          <div class="bg-white/5 border border-white/10 rounded-2xl p-8 mb-8 w-full backdrop-blur-md relative overflow-hidden group hover:border-accent/30 transition">
+             <div class="absolute inset-0 bg-gradient-to-r from-cyan-500/10 to-purple-500/10 opacity-50"></div>
+             <div class="absolute top-0 bottom-0 left-0 w-1 bg-white/50 blur-[5px] animate-[shimmer_2s_infinite]"></div>
+
+             <div class="relative z-10 flex flex-col items-center gap-3">
+                 <span class="px-3 py-1 rounded-full bg-green-500/20 text-green-400 text-[10px] font-black uppercase tracking-widest border border-green-500/30 flex items-center gap-2">
+                    <i class="fa-solid fa-unlock"></i> Reward Unlocked
+                 </span>
+                 <h3 class="text-3xl font-black text-white mt-1 italic tracking-tight">3 ELITE SESSIONS</h3>
+                 <p class="text-xs text-slate-300 font-mono tracking-wide mt-1">Full Invisibility • Priority GPU • Zero Latency</p>
+                 <div class="mt-2 text-[10px] text-slate-500 uppercase tracking-widest">Added to your free account</div>
+             </div>
           </div>
 
           <button onclick="closeCelebration()" class="w-full py-5 rounded-2xl btn-rainbow-anim text-white text-xl font-black uppercase tracking-[0.2em] shadow-[0_0_50px_rgba(255,255,255,0.3)] hover:scale-105 transition transform">
