--- a/index.html
+++ b/index.html
@@ -357,30 +357,30 @@
           <h2 class="text-3xl font-medium text-white mb-8">They see nothing. You see everything.</h2>
           
           <div class="grid grid-cols-2 gap-4 md:gap-8 max-w-3xl mx-auto mb-8">
-                <div class="bg-[#1a1a1a] p-4 rounded-xl border border-white/10">
-                    <p class="text-[10px] text-slate-500 uppercase mb-2">Interviewer Sees</p>
-                    <div class="aspect-video bg-[#222] rounded flex items-center justify-center">
-                        <i class="fa-solid fa-user text-slate-600 text-3xl"></i>
-                    </div>
-                    <p class="text-xs text-slate-400 mt-2">Just you. No overlays.</p>
-                </div>
-                <div class="bg-[#1a1a1a] p-4 rounded-xl border border-accent/20 relative overflow-hidden">
-                    <p class="text-[10px] text-accent uppercase mb-2">You See</p>
-                    <div class="aspect-video bg-[#222] rounded flex items-center justify-center relative overflow-hidden">
-                        <i class="fa-solid fa-user text-slate-600 text-3xl"></i>
-                        <div class="absolute right-2 top-2 bottom-2 w-1/3 bg-black/80 border-l border-accent/50 p-2">
-                            <div class="h-1 w-full bg-accent mb-1"></div>
-                            <div class="h-1 w-2/3 bg-slate-600 mb-1"></div>
-                            <div class="h-1 w-3/4 bg-slate-600"></div>
-                        </div>
-                    </div>
-                    <p class="text-xs text-white mt-2">Live answers & hints.</p>
-                </div>
+               <div class="bg-[#1a1a1a] p-4 rounded-xl border border-white/10">
+                   <p class="text-[10px] text-slate-500 uppercase mb-2">Interviewer Sees</p>
+                   <div class="aspect-video bg-[#222] rounded flex items-center justify-center">
+                       <i class="fa-solid fa-user text-slate-600 text-3xl"></i>
+                   </div>
+                   <p class="text-xs text-slate-400 mt-2">Just you. No overlays.</p>
+               </div>
+               <div class="bg-[#1a1a1a] p-4 rounded-xl border border-accent/20 relative overflow-hidden">
+                   <p class="text-[10px] text-accent uppercase mb-2">You See</p>
+                   <div class="aspect-video bg-[#222] rounded flex items-center justify-center relative overflow-hidden">
+                       <i class="fa-solid fa-user text-slate-600 text-3xl"></i>
+                       <div class="absolute right-2 top-2 bottom-2 w-1/3 bg-black/80 border-l border-accent/50 p-2">
+                           <div class="h-1 w-full bg-accent mb-1"></div>
+                           <div class="h-1 w-2/3 bg-slate-600 mb-1"></div>
+                           <div class="h-1 w-3/4 bg-slate-600"></div>
+                       </div>
+                   </div>
+                   <p class="text-xs text-white mt-2">Live answers & hints.</p>
+               </div>
           </div>
           
           <div class="flex justify-center gap-6 text-xs text-slate-500">
-                <span class="flex items-center gap-2"><i class="fa-solid fa-shield-halved"></i> No browser injection</span>
-                <span class="flex items-center gap-2"><i class="fa-solid fa-eye-slash"></i> Hidden from screen share</span>
+               <span class="flex items-center gap-2"><i class="fa-solid fa-shield-halved"></i> No browser injection</span>
+               <span class="flex items-center gap-2"><i class="fa-solid fa-eye-slash"></i> Hidden from screen share</span>
           </div>
       </div>
   </section>
@@ -618,7 +618,7 @@
         <p class="text-xs text-slate-400 mb-8">Choose your preferred secure gateway.</p>
 
         <button onclick="triggerRazorpayFlow(event)" class="w-full py-3 mb-4 rounded-xl bg-[#3395ff] text-white font-bold hover:brightness-110 transition flex items-center justify-center gap-3">
-            <i class="fa-solid fa-credit-card"></i> Pay via Razorpay (USD)
+            <i class="fa-solid fa-credit-card"></i> Pay via Razorpay (INR)
         </button>
 
         <div class="relative flex py-2 items-center mb-4">
@@ -867,9 +867,9 @@
         if (!amount) return "...";
         if(discount > 0) {
             const discounted = Math.floor(amount * (1 - discount/100)); 
-            return `<span>$${discounted}</span> <span class="text-sm line-through text-slate-500 opacity-60 mx-1">$${Math.floor(amount)}</span> <span class="text-[10px] font-bold text-black bg-accent px-1.5 py-0.5 rounded align-middle">${discount}% OFF</span>`;
+            return `<span>₹${discounted}</span> <span class="text-sm line-through text-slate-500 opacity-60 mx-1">₹${Math.floor(amount)}</span> <span class="text-[10px] font-bold text-black bg-accent px-1.5 py-0.5 rounded align-middle">${discount}% OFF</span>`;
         }
-        return `$${Math.floor(amount)}`;
+        return `₹${Math.floor(amount)}`;
     }
 
     function setCycle(c){
