--- a/index.html
+++ b/index.html
@@ -335,6 +335,62 @@
       </div>
   </section>
 
+  <section id="features" class="py-24 border-t border-white/5 bg-black/60 backdrop-blur-sm">
+      <div class="max-w-7xl mx-auto px-6">
+          <h2 class="text-3xl md:text-5xl font-medium text-white mb-16 text-center">The Core Stack.</h2>
+          
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-red-500/10 flex items-center justify-center mb-4 text-red-400 group-hover:scale-110 transition"><i class="fa-solid fa-microphone-lines text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Voice Capture</h3>
+                  <p class="text-sm text-slate-400">Listens to interviewer audio in real-time and generates instant answers.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center mb-4 text-blue-400 group-hover:scale-110 transition"><i class="fa-solid fa-desktop text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Screen Vision</h3>
+                  <p class="text-sm text-slate-400">Captures code, diagrams, and questions from your screen for visual analysis.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-green-500/10 flex items-center justify-center mb-4 text-green-400 group-hover:scale-110 transition"><i class="fa-solid fa-keyboard text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Direct Input</h3>
+                  <p class="text-sm text-slate-400">Type specific queries or clarifications directly to get precise outputs.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-purple-500/10 flex items-center justify-center mb-4 text-purple-400 group-hover:scale-110 transition"><i class="fa-solid fa-eye-slash text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">100% Invisible</h3>
+                  <p class="text-sm text-slate-400">Completely hidden from screenshare tools like Zoom, Teams, and Meets.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-slate-500/10 flex items-center justify-center mb-4 text-slate-400 group-hover:scale-110 transition"><i class="fa-solid fa-ghost text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Ghost Mode</h3>
+                  <p class="text-sm text-slate-400">Zero footprint. No dock icon, no taskbar presence. Runs in the background.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-yellow-500/10 flex items-center justify-center mb-4 text-yellow-400 group-hover:scale-110 transition"><i class="fa-solid fa-language text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Universal Translator</h3>
+                  <p class="text-sm text-slate-400">Understands any spoken language and provides answers in perfect English.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group">
+                  <div class="w-12 h-12 rounded-xl bg-pink-500/10 flex items-center justify-center mb-4 text-pink-400 group-hover:scale-110 transition"><i class="fa-solid fa-brain text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Smart Context</h3>
+                  <p class="text-sm text-slate-400">Set meeting contexts (Job Desc, Resume) for highly relevant, tailored answers.</p>
+              </div>
+
+              <div class="physics-card p-6 hover:bg-white/5 transition group border border-accent/20 bg-accent/5">
+                  <div class="w-12 h-12 rounded-xl bg-accent/20 flex items-center justify-center mb-4 text-accent group-hover:scale-110 transition"><i class="fa-solid fa-gift text-xl"></i></div>
+                  <h3 class="text-white font-bold mb-2">Free Trial</h3>
+                  <p class="text-sm text-slate-300">New users get 3 full-feature sessions to test everything before paying.</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
   <section class="py-20 border-t border-white/5 bg-black">
       <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center gap-12">
           <div class="flex-1 space-y-6">
