--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     }
     .intro-active { opacity: 1; transform: scale(1); }
 
-    /* --- CAROUSEL FIXES --- */
+    /* --- CAROUSEL CSS --- */
     .carousel-container { 
         perspective: 1200px; 
         display: flex; 
