--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@
         }
     }
 
-    // --- SLIDER AUTO-ANIMATION ---
+    // --- SLIDER AUTO-ANIMATION (UPDATED FOR RESUME) ---
     let sliderAutoPlay = true;
     let sliderTime = 0;
 
@@ -1605,6 +1605,10 @@
         // Stop on interaction
         sliderContainer.addEventListener('mouseenter', () => { sliderAutoPlay = false; });
         sliderContainer.addEventListener('touchstart', () => { sliderAutoPlay = false; });
+
+        // Resume on leave/end
+        sliderContainer.addEventListener('mouseleave', () => { sliderAutoPlay = true; });
+        sliderContainer.addEventListener('touchend', () => { sliderAutoPlay = true; });
 
         function animate() {
             if (sliderAutoPlay) {
