--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
     .physics-card:hover::before { opacity: 1; }
     .physics-card:hover { border-color: rgba(255, 255, 255, 0.2); }
 
+    /* --- MOBILE OPTIMIZATION FOR CARDS (ELEGANT GLOW WITHOUT HOVER) --- */
+    @media (max-width: 768px) {
+        .physics-card {
+            background: linear-gradient(145deg, rgba(20, 20, 20, 0.9), rgba(10, 10, 10, 0.95));
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+        }
+        /* Subtle glow on bottom edge for mobile elegance */
+        .physics-card::after {
+            content: '';
+            position: absolute;
+            bottom: 0; left: 20%; right: 20%;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, var(--accent), transparent);
+            opacity: 0.5;
+        }
+    }
+
     /* --- INTRO SEQUENCE --- */
     .intro-overlay {
         position: fixed; inset: 0; z-index: 9999;
@@ -376,16 +394,16 @@
     </div>
   </nav>
 
-  <div class="md:hidden fixed bottom-0 left-0 right-0 z-50 bg-black/90 backdrop-blur-lg border-t border-white/10 p-3 pb-6 grid grid-cols-2 gap-3">
-      <a href="#demo" class="py-3.5 rounded-xl bg-white/10 text-white text-xs font-bold text-center border border-white/10 flex items-center justify-center gap-2">
+  <div class="md:hidden fixed bottom-0 left-0 right-0 z-50 bg-black/90 backdrop-blur-2xl border-t border-white/10 p-4 pb-8 grid grid-cols-2 gap-4 shadow-[0_-10px_40px_rgba(0,0,0,0.8)]">
+      <a href="#demo" class="py-4 rounded-xl bg-white/10 text-white text-xs font-bold text-center border border-white/10 flex items-center justify-center gap-2 active:scale-95 transition-transform">
           <i class="fa-solid fa-play"></i> Watch Demo
       </a>
-      <button onclick="openDownloadModal()" class="py-3.5 rounded-xl bg-[var(--accent)] text-black text-xs font-bold text-center shadow-[0_0_15px_var(--accent-glow)] flex items-center justify-center gap-2">
+      <button onclick="openDownloadModal()" class="py-4 rounded-xl bg-[var(--accent)] text-black text-xs font-bold text-center shadow-[0_0_20px_var(--accent-glow)] flex items-center justify-center gap-2 active:scale-95 transition-transform">
           <i class="fa-brands fa-windows"></i> <i class="fa-brands fa-apple"></i> Try Free
       </button>
   </div>
 
-  <a href="https://wa.me/9092435258" target="_blank" class="fixed bottom-24 right-4 z-40 bg-[#25D366] w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition md:bottom-8">
+  <a href="https://wa.me/9092435258" target="_blank" class="fixed bottom-28 right-4 z-40 bg-[#25D366] w-12 h-12 rounded-full flex items-center justify-center shadow-lg hover:scale-110 transition md:bottom-8">
       <i class="fa-brands fa-whatsapp text-white text-2xl"></i>
       <span class="absolute right-14 bg-white text-black text-[10px] font-bold py-1 px-2 rounded whitespace-nowrap hidden md:block">Need help?</span>
   </a>
@@ -393,7 +411,7 @@
   <section class="relative pt-28 md:pt-48 pb-12 overflow-hidden flex flex-col items-center">
     <div class="relative z-10 text-center max-w-5xl px-6 mb-10 flex flex-col items-center">
        
-      <h1 class="text-4xl md:text-8xl font-medium tracking-tight leading-[1] mb-6 text-white">
+      <h1 class="text-4xl md:text-8xl font-medium tracking-tight leading-[1.1] md:leading-[1] mb-6 text-white">
         Helps you answer interviews<br>
         <span class="text-accent drop-shadow-[0_0_30px_var(--accent-glow)] transition-colors duration-1000">in real-time.</span>
       </h1>
